<resources>
    <string name="nostorageperm">Es necesario conceder permisos sobre la memoria para hacer firmas locales</string>
    <string name="yes">S\u00ED</string>
    <string name="no">No</string>
    <string name="app_name">Autofirma App</string>
    <string name="title_activity_cert_chooser">Importar certificado</string>
    <string name="title_activity_choose_sign_file">Seleccione el fichero a firmar</string>
    <string name="presentation_text">Bienvenido a "Autofirma App".\nEsta aplicaci\u00F3n permite realizar firmas electr\u00F3nicas en las p\u00E1ginas de los proveedores de servicios que lo soporten.\nPara funcionar correctamente debe tener un certificado electr\u00F3nico y su clave privada instalados en su dispositivo, consulte la documentaci\u00F3n de su sistema Android y con su proveedor de servicios de certificaci\u00F3n.</string>
    <string name="import_cert">Importar certificado</string>
    <string name="sign_file">Firmar fichero</string>
    <string name="request_cert">Solicitar certificado</string>
    <string name="appsDialogTitle">Listado de autoridades soportadas</string>
    <string name="appsDialogMessage">Seleccione la autoridad de certificaci\u00F3n a la que desee solicitar su certificado.</string>
    <string name="disclaimer">2024 Gobierno de Espa\u00F1a</string>
    <string name="privacy_policy">Pol\u00EDtica de privacidad</string>
    <string name="privacy_policy_url">https://administracion.gob.es/pag_Home/politicaDePrivacidad.html</string>
    <string name="accessibility_statement">Declaraci\u00F3n de accesibilidad</string>
    <string name="accessibility_statement_url">http://estaticos.redsara.es/comunes/clientefirmaandroid/1/8/0/declaracion_accesibilidad.pdf</string>
    <string name="main_logo_content_desc">Autofirma App</string>
    <string name="ok">Aceptar</string>
    <string name="close">Cerrar</string>
    <string name="title_activity_sign_data">Firma de datos</string>
    <string name="title_activity_sign_batch">Firma por lotes</string>
    <string name="title_activity_select_certificate">Selecci\u00F3n de certificado</string>
    <string name="error_bad_params">No se ha realizado correctamente la invocaci\u00F3n de la aplicaci\u00F3n. Consulte al responsable del tr\u00E1mite.</string>
    <string name="error_server_connect">Ocurri\u00F3 un error en la conexi\u00F3n entre la aplicaci\u00F3n y la p\u00E1gina web.</string>
    <string name="file_chooser_directorio_actual">Directorio actual: %s</string>
    <string name="file_chooser_directorio">Directorio</string>
    <string name="file_chooser_directorio_padre">Directorio padre</string>
    <string name="file_chooser_tamano_del_fichero">Tama\u00F1o:</string>
    <string name="bytes">bytes</string>
    <string name="kilobytes">KB</string>
    <string name="megabytes">MB</string>
    <string name="error_loading_selected_file">Ocurri\u00F3 un error cargando el fichero</string>
    <string name="error_loading_selected_undefined_file">Ocurri\u00F3 un error cargando el fichero</string>
    <string name="error_no_valid_p12">El fichero \"%s\" no es un PKCS#12 v\u00E1lido. Seleccione un nuevo almac\u00E9n para importar.</string>
    <string name="error">Error</string>
    <string name="error_loading_keystore">Error al cargar el almacen de certificados</string>
    <string name="error_loading_cert">Error al cargar el certificado</string>
    <string name="error_saving_record">La firma se ha realizado correctamente, pero no se ha incluido en el registro de firmas</string>
    <string name="error_ocurred">Ha ocurrido un error</string>
    <string name="operation_cancelled">Operacion cancelada</string>
    <string name="error_reading_dnie">No se ha podido leer correctamente el DNIe</string>
    <string name="title_activity_save_data">Guardar datos</string>
    <string name="saveData">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="allow">Permitir</string>
    <string name="default_saved_filename">datos</string>
    <string name="error_cant_load_request">No se han podido cargar los datos de la petici\u00F3n</string>
    <string name="error_saving_data">Ocurri\u00F3 un error al guardar los datos</string>
    <string name="error_saving_signature">Ocurri\u00F3 un error al guardar la firma</string>
    <string name="error_sending_data">No se pudo transmitir el resultado de la operacion al navegador web</string>
    <string name="error_signing">Error durante la operacion de firma</string>
    <string name="error_signing_config">Error durante la configuraci\u00F3n de la firma electr\u00F3nica</string>
    <string name="error_no_storage_permissions">El Cliente de firma no tiene permisos de escritura en disco.</string>
    <string name="error_no_device_to_store">No se ha encontrado un directorio para guardar la firma</string>
    <string name="error_no_certs">No se han encontrado certificados instalados en su dispositivo.</string>
    <string name="error_title_keystore_empty">Almac\u00E9n vac\u00EDo</string>
    <string name="error_dni_blocked_dlg">Lo sentimos, su DNI est\u00E1 bloqueado.</string>
    <string name="error_dni_blocked">Su DNI est\u00E1 bloquedado, deber\u00E1 acudir a los Puntos de Actualizaci\u00F3n de las Oficinas de Expedici\u00F3n para poder desbloquearlo. </string>
    <string name="error_title_dni_blocked">DNI bloqueado</string>
    <string name="error_empty_pdf_password">La contrase\u00F1a del PDF no puede estar vac\u00EDa:</string>
    <string name="error_pin_nulo">Error, el PIN del DNI es nulo.</string>
    <string name="error_android_4_1">Android 4.1 y 4.1.1 no permiten que los nombres de certificados contengan caracteres especiales (espacios, guiones, etc.). Modifique el alias de sus certificados al importarlos para evitar este error.</string>
    <string name="error_json">Error al tratar JSON.</string>
    <string name="icon_ca">Icono de la autoridad de certificaci\u00F3n</string>
    <string name="dialog_msg_loading_data">Cargando datos</string>
    <string name="dialog_msg_loading_keystore">Cargando almac\u00E9n de claves</string>
    <string name="dialog_msg_signning">Firmando</string>
    <string name="dialog_pdf_password_title">Documento protegido</string>
    <string name="dialog_pdf_password">Introduzca la contrase\u00F1a:</string>
    <string name="dialog_pdf_bad_password">Contrase\u00F1a incorrecta:</string>
    <string name="dialog_pin">Para poder utilizar el certificado introduzca su c\u00F3digo de seguridad.\n</string>
    <string name="dialog_can">Introduzca su c\u00F3digo CAN para establecer una conexi\u00F3n NFC con su DNIe.\n</string>
    <string name="dialog_title_select_cert">Seleccione un certificado</string>
    <string name="security_code">C\u00F3digo de seguridad</string>
    <string name="security_code_hint">C\u00F3digo CAN. </string>
    <string name="signedfile_title">Resultado de firma</string>
    <string name="signedfile_title_result_error">Resultado de firma: Error al firmar</string>
    <string name="signedfile_title_result_correct">Resultado de firma: Firma correcta</string>
    <string name="signedfile_error">Lo sentimos la firma no se ha podido realizar. Por favor, reint\u00E9ntelo de nuevo.</string>
    <string name="signedfile_correct">La firma se ha realizado correctamente.</string>
    <string name="signedfile_original_location">La firma "%1$s" se ha almacenado en el mismo directorio que el fichero original.</string>
    <string name="signedfile_downloads_location">La firma "%1$s" se ha almacenado en su directorio de descargas.</string>
    <string name="incorrect_pin">PIN incorrecto</string>
    <string name="error_msc_pin">El PIN del dispositivo criptogr\u00E1fico es incorrecto. Tenga en cuenta que varios intentos fallidos consecutivos podr\u00EDan bloquearlo.</string>
    <string name="error_format_not_supported">Formato de firma no soportado.</string>
    <string name="dialog_alias_cert_text">%1$s\nV\u00E1lido: %2$s\nHasta: %3$s\nEmisor: %4$s</string>
    <string name="accesibility_icon_filetype">Icono del tipo de archivo</string>
    <string name="accesibility_icon_sign_ko">Error en la firma</string>
    <string name="accesibility_icon_sign_ok">Firma correcta</string>
    <string name="accesibility_select_option">Seleccione una opci\u00F3n</string>
    <string name="accesibility_back_parent_folder">Volver a directorio padre</string>
    <string name="trusted_domains">Dominios de confianza</string>
    <string name="how_install_certs">¿C\u00F3mo instalar certificados?</string>
    <string name="language">Idioma</string>
    <string name="acceptance_conditions">Aceptaci\u00F3n de condiciones</string>
    <string name="read_and_accept_privacy">He le\u00EDdo y estoy de acuerdo con la Pol\u00EDtica de Privacidad</string>
    <string name="read_and_accept_legal">He le\u00EDdo y estoy de acuerdo con el Aviso Legal y los T\u00E9rminos y Condiciones de Uso</string>
    <string name="how_to_do_visible_sign">C\u00F3mo hacer firma visible</string>
    <string name="visible_sign_help_text_1">Autofirma App permite hacer firma visible de documentos PDF que tenga en su dispositivo, en los que aparecer\u00e1 el propietario y emisor del certificado y la fecha y hora de la firma. Puede habilitar la firma visible activando la opci\u00f3n \'Hacer firma visible\' en la secci\u00f3n \'Configuraci\u00f3n de firma\'.</string>
    <string name="visible_sign_help_text_2">Si no desea que su DNI/NIE aparezca visible en el texto de la firma, puede ocultarlo parcialmente activando la opci\u00f3n \'Ofuscar identificadores de usuario de los certificados de las firmas visibles\'.</string>
    <string name="visible_sign_help_text_3">Durante la firma del documento se le mostrar\u00e1 una miniatura del mismo y controles que le permitir\u00e1n navegar entre sus p\u00e1ginas y seleccionar la posici\u00f3n en la que desea incluir la firma.</string>
    <string name="visible_sign_help_text_4">Seleccione el \u00e1rea en la que posicionar la firma y pulse \'Continuar\' para firmar el documento.</string>
    <string name="trusted_domains_help_text_1">Si necesita realizar un tr\u00e1mite en alguna web con un dominio que no utilice un certificado SSL en el que Android conf\u00ede, puede agregar este dominio a la lista de dominios seguros de la aplicaci\u00f3n. desde la secci\u00f3n \'Dominios de confianza\'. En esta secci\u00f3n puede componer la lista de dominios que considera seguros, para los que no es necesario validar el certificado SSL. Agregue los distintos dominios separados por comas (\',\') y usando un comod\u00edn (\'*\') al principio o final del nombre si fuese preciso.</string>
    <string name="trusted_domains_help_text_2">En este apartado tambi\u00e9n podr\u00eda desactivar la validaci\u00f3n del certificado SSL para todos los dominios desactivando la opci\u00f3n \'Validar conexiones SSL\'. No es seguro desactivar completamente la validaci\u00f3n de los certificados de conexi\u00f3n, por lo que debe evitarse siempre que sea posible.</string>
    <string name="import_certs_help_text_1">Autofirma App utiliza los certificados del almac\u00e9n de claves de Android para firmar. Puede instalar un nuevo certificado abriendo directamente el fichero .p12 o .pfx con las claves del certificado e introduciendo su contrase\u00f1a. Tambi\u00e9n puede seleccionar ese mismo fichero a trav\u00e9s de la opci\u00f3n \'A\u00f1adir nuevo certificado\' de la pantalla principal de Autofirma App.</string>
    <string name="import_certs_help_text_2">El certificado reci\u00e9n instalado ya estar\u00e1 disponible en su dispositivo y podr\u00e1 usarlo desde Autofirma App para firmar.</string>
    <string name="import_certs_help_text_3">Si no encuentras el fichero de claves en tu m\u00f3vil, puedes envi\u00e1rtelo desde otro dispositivo por correo electr\u00f3nico u otras aplicaciones en la nube.</string>
    <string name="privacy_policy_title_1">Pol\u00EDtica de privacidad de Autofirma App</string>
</resources>