<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/visible_sign_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/visibleSignHelpToolbar"
        android:layout_width="match_parent"
        android:touchscreenBlocksFocus="false"
        app:popupTheme="@style/AppTheme"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:navigationIcon="@drawable/nav_back_selector"
        app:titleCentered="true"
        app:title="@string/how_to_do_visible_sign"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:titleTextColor="@color/black"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:theme="@style/TextViewSettingsTheme"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/p1Tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosans"
                android:text="@string/visible_sign_help_text_1"
                android:paddingStart="8dp"/>

            <TextView
                android:id="@+id/p2Tv"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosans"
                android:text="@string/visible_sign_help_text_2"
                android:paddingStart="8dp"/>

            <Button
                android:id="@+id/goToConfigBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:onClick="onClick"
                style="@style/ButtonRedLarge" />

            <TextView
                android:id="@+id/p3Tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosans"
                android:text="@string/visible_sign_help_text_3"
                android:paddingStart="8dp"/>


            <ImageView
                android:layout_width="297dp"
                android:layout_height="579dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:src="@drawable/visible_sign_help_3"
                android:background="@drawable/image_help_border"
                />

            <TextView
                android:id="@+id/p4Tv"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosans"
                android:text="@string/visible_sign_help_text_4"
                android:paddingStart="8dp"/>

        </LinearLayout>


    </ScrollView>
</LinearLayout>