<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/conditions_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/conditionsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        android:touchscreenBlocksFocus="false"
        app:popupTheme="@style/AppTheme"
        app:title="@string/acceptance_conditions"
        app:titleCentered="true"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:titleTextColor="@color/black" />

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/merriweatherbold"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/privacy_policy_title_1"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/language_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/subtitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:fontFamily="@font/merriweatherbold"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinner_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:popupBackground="@android:color/transparent"
        android:layout_marginLeft="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fadeScrollbars="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarFadeDuration="50000"
        android:scrollbarThumbVertical="@android:color/black"
        android:padding="10dp"
        android:layout_margin="15dp"
        android:layout_weight="0.30"
        android:background="@drawable/rounded_black_borders">

        <TextView
            android:id="@+id/contentConditionsTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/nunitosans"
            android:textColor="@color/black" />

    </ScrollView>


    <CheckBox
        android:id="@+id/readAndAcceptPrivacyChk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/black"
        android:fontFamily="@font/nunitosans"
        app:buttonTint="@color/red"
        android:text="@string/read_and_accept_privacy"
        />

    <CheckBox
        android:id="@+id/readAndAcceptLegalChk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/nunitosans"
        app:buttonTint="@color/red"
        android:text="@string/read_and_accept_legal"
        />

    <Button
        android:id="@+id/acceptConditionsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/nunitosans"
        android:textStyle="bold"
        android:textColor="#767676"
        android:onClick="onClick"
        android:enabled="false"
        android:text="@string/ok"
        android:background="@drawable/btn_red_large_states" />

</LinearLayout>